Update jvm_options_best_practises.md